--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,7 @@
 @import url("banner.css");
 @import url("carrossel.css");
 @import url("topico.css");
+@import url("contato.css");
 
 :root{
     --cor-de-fundo: #EBECEE;
