--- a/styles/banner.css
+++ b/styles/banner.css
@@ -24,6 +24,7 @@
     border: 1px solid var(--cor-branco);
     border-radius: 24px;
     color: var(--cor-branco);
+    padding: 1em;
 }
 
 .banner__pesquisa::placeholder{
@@ -33,4 +34,18 @@
     color: var(--cor-branco);
     text-align: center;
     background: url("../assets/main/Pesquisa.svg") no-repeat;
+}
+
+@media screen and (min-width: 1024px){
+    .banner__titulo{
+        font-size: 36px;
+    }
+    
+    .banner__pesquisa{
+        width: 50%;
+    }
+
+    .banner__pesquisa::placeholder{
+        background-position: 7em;
+    }
 }
