--- a/styles/contato.css
+++ b/styles/contato.css
@@ -35,3 +35,24 @@
     padding-left: 2.5em;
     background: url("../assets/main/Email.svg") no-repeat;
 }
+
+@media screen and (min-width: 1024px){
+    .contato{
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .contato__descicao{
+        margin-right: 1em;
+        width: 30%;
+    }
+
+    .contato__email{
+        width: 30%;
+    }
+
+    .contato__titulo{
+        font-size: 24px;
+    }
+}
