--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
 @import url("header.css");
 @import url("banner.css");
 @import url("carrossel.css");
 @import url("topico.css");
 @import url("contato.css");
+@import url("rodape.css");
 
 :root{
     --cor-de-fundo: #EBECEE;
@@ -12,7 +14,9 @@
     --cor-branco: #FFF;
     --cor-bolinha-seletor: #C4C4C4;
     --cor-gradiante: linear-gradient(98deg, #002F52 35.49%, #326589 165.37%);
+    --cor-preto: #000;
     --fonte: 'Poppins', sans-serif;
+    --fonte-secundaria: 'Josefin Sans', sans-serif;
 }
 
 body{
