--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -5,4 +5,41 @@
 .rodape{
     background-color: var(--cor-branco);
     padding: 1em;
+    display: flex;
+}
+
+.lista__rodape{
+    display: none;
+}
+
+@media screen and (min-width: 1024px) {
+    .lista__rodape{
+        display: block;
+        margin: 1em auto 0 auto;
+    }
+
+    .rodape__titulo{
+        font-size: 24px;
+        margin: 1em 3em 0 0;
+    }
+
+    .lista__rodape__titulo{
+        color: var(--cor-fonte-rodape);
+        font-size: 14px;
+        text-transform: uppercase;
+        margin-bottom: 2em;
+    }
+
+    .lista__rodape__item{
+        display: flex;
+        align-items: center;
+        margin: 1em;
+    }
+
+    .item__link{
+        color: var(--cor-fonte-lista);
+        font-size: 14px;
+        text-decoration: none;
+        padding: 0 1em;
+    }
 }
