--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,6 +15,8 @@
     --cor-bolinha-seletor: #C4C4C4;
     --cor-gradiante: linear-gradient(98deg, #002F52 35.49%, #326589 165.37%);
     --cor-preto: #000;
+    --cor-fonte-rodape: #858585;
+    --cor-fonte-lista: #474646;
     --fonte: 'Poppins', sans-serif;
     --fonte-secundaria: 'Josefin Sans', sans-serif;
 }
