--- a/styles/topico.css
+++ b/styles/topico.css
@@ -1,7 +1,7 @@
 .topicos{
     background: var(--cor-gradiante);
     text-align: center;
-    padding-top: 1.5em;
+    padding: 1.5em 0;
 }
 
 .topicos__titulo{
