--- a/styles/banner.css
+++ b/styles/banner.css
@@ -49,3 +49,19 @@
         background-position: 7em;
     }
 }
+
+@media screen and (min-width: 1728px) {
+
+    .banner__pesquisa{
+        width: 38%;
+    }
+
+    .banner__pesquisa::placeholder{
+        background-position: 10em;
+    }
+
+    .banner{
+        padding: 5em 0;
+    }
+    
+}
