--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -43,3 +43,14 @@
         padding: 0 1em;
     }
 }
+
+@media screen and (min-width: 1728px) {
+    .lista__rodape{
+        border-left: 1px solid var(--cor-fonte-lista);
+        padding-left: 1em;
+    }
+
+    .rodape{
+        padding: 3em 0;
+    }
+}
